# public_file_reader_package

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
gryszka_config_package/xxx/: config.yml
gryszka_config_package/yyy/: main.py
gryszka_config_package/zzz/: read_file.py
gryszka_config_package/zzz/uuu/ooo/: read_file.py
src/gryszka_config_package/yyy/ddd/eee/: main.py
tests/: conftest.py  test_common.py  test_main.py
