[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gryszka_config_package"
version = "0.1.2"
description = "A package to read configuration from a YAML file"
authors = [
    { name="Gryszka", email="romanowicz.g@gmail.com" }
]
dependencies = [
    "pyyaml"
]
readme = "README.md"

[tool.setuptools]
packages = [
    "gryszka_config_package",
    "gryszka_config_package.xxx",
    "gryszka_config_package.xxx.rrr",
    "gryszka_config_package.xxx.rrr.ttt",
    "gryszka_config_package.yyy",
    "gryszka_config_package.yyy.ddd",
    "gryszka_config_package.yyy.ddd.eee",
    "gryszka_config_package.zzz",
    "gryszka_config_package.zzz.uuu",
    "gryszka_config_package.zzz.uuu.ooo",
]
include-package-data = true

[tool.setuptools.package-data]
gryszka_config_package = ["xxx/rrr/ttt/config.yml"]