[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gryszka_config_package"
version = "0.1.2"
description = "A package to read configuration from a YAML file"
authors = [
    { name="Gryszka", email="romanowicz.g@gmail.com" }
]
dependencies = [
    "pyyaml"
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gryszka_config_package*"]

[tool.setuptools.package-data]
gryszka_config_package = ["xxx/rrr/ttt/config.yml"]